--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,34 @@ code {
     margin-top: 47%;
   }
 }
+
+.Footer {
+  background-color: white;
+  color: black;
+  text-align: center;
+  width: 90vw;
+  padding: 0.5rem;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  user-select: none;
+}
+.Footer__copyright {
+  letter-spacing: 2px;
+}
+.Footer__copyright span {
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  padding-left: 1rem;
+  margin-left: 0.5rem;
+}
+.Footer__message {
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: 300;
+  font-size: 1.2rem;
+ 
+}
+.Footer__bold {
+  font-size: 15px;
+  color: #ed6a5a;
+  margin: auto 5px;
+}
